<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="postal_address">Postal Address</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="my_representative">My Representative</string>
    <string name="representative_image">Representative Image</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="twitter">Twitter</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">UnFollow Election</string>
    <string name="state_location">State Location</string>
    <string name="state_ballot">State Ballot</string>
    <string name="use_my_location">Use My Location</string>
    <string name="voting_locations">Voting locations</string>
    <string name="ballot_information">Ballot information</string>

</resources>
