<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/representative_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="321dp"
            android:layout_height="59dp"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/twitterIcon"
                app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
                app:layout_constraintTop_toTopOf="@+id/twitterIcon"
                app:srcCompat="@drawable/ic_facebook"
                android:contentDescription="@string/facebook" />

            <ImageView
                android:id="@+id/wwwIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/facebookIcon"
                app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
                app:layout_constraintTop_toTopOf="@+id/facebookIcon"
                app:srcCompat="@drawable/ic_www"
                android:contentDescription="@string/website" />

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_twitter"
                android:contentDescription="@string/twitter" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{representative.official.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{representative.official.party}"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>